Fixed user avatar from facebook not showing on index page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,6 +12,11 @@ $gray-medium-light: #eaeaea;
 
 /* Users index */
 
+.user-index-avatar {
+  height: 40px;
+  width: 40px;
+}
+
 .page-item {
   border: none;
 }
